--- a/android/build.gradle
+++ b/android/build.gradle
@@ -69,7 +69,9 @@ android {
         }
 
         ndk {
-            abiFilters "arm64-v8a", "armeabi-v7a", "x86_64"
+            // armeabi-v7a removed: requires architecture-specific GStreamer SDK
+            // Modern devices use arm64-v8a; x86_64 for emulators
+            abiFilters "arm64-v8a", "x86_64"
         }
     }
 
