--- a/android/build.gradle
+++ b/android/build.gradle
@@ -69,9 +69,8 @@ android {
         }
 
         ndk {
-            // armeabi-v7a removed: requires architecture-specific GStreamer SDK
-            // Modern devices use arm64-v8a; x86_64 for emulators
-            abiFilters "arm64-v8a", "x86_64"
+            // Nur noch arm64-v8a für moderne Android-Geräte
+            abiFilters "arm64-v8a"
         }
     }
 
