--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -8,8 +8,11 @@ set(PROJECT_NAME "kataglyphis_native_inference")
 project(${PROJECT_NAME} LANGUAGES CXX)
 
 if(CMAKE_C_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --gcc-toolchain=/opt/gcc-15.2.0")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --gcc-toolchain=/opt/gcc-15.2.0")
+  set(GCC_TOOLCHAIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/gcc-15.2.0")
+  if(EXISTS "${GCC_TOOLCHAIN_DIR}")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --gcc-toolchain=${GCC_TOOLCHAIN_DIR}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --gcc-toolchain=${GCC_TOOLCHAIN_DIR}")
+  endif()
 endif()
 
 # This value is used when generating builds using this plugin, so it must
